src/main/java/com/example/finalproject/_core/error/exception/Exception403.java
package com.example.finalproject._core.error.exception;

public class Exception403 extends RuntimeException{

    public Exception403(String msg) {
        super(msg);
    }
}
